--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*,
+html,
+body {
+    scroll-behavior: smooth !important;
+}
 /*-------------------------------------------------
  =  Table of Css
 
